--- a/app/StyleSheets/index.css
+++ b/app/StyleSheets/index.css
@@ -5,7 +5,8 @@
 /* Always set the map height explicitly to define the size of the div
  * element that contains the map. */
 #map {
-  height: 100%;
+  height: 100vh;
+  width:100vw;
 }
 /* Optional: Makes the sample page fill the window. */
 html, body {
@@ -13,5 +14,3 @@ html, body {
   margin: 0;
   padding: 0;
 }
-
-
