--- a/app/StyleSheets/index.css
+++ b/app/StyleSheets/index.css
@@ -4,7 +4,23 @@
 
 /* Always set the map height explicitly to define the size of the div
  * element that contains the map. */
+
+
+nav{
+  width:80vh;
+  position: absolute;
+  top:0px;
+  left:0px;
+  margin:auto;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  border:1px solid black;
+}
+
 #map {
+  position: absolute;
+  top:0px;
+  left:0px;
   height: 100vh;
   width:100vw;
 }
