--- a/app/StyleSheets/index.css
+++ b/app/StyleSheets/index.css
@@ -14,7 +14,12 @@ nav{
   margin:auto;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
-  border:1px solid black;
+  /*border:1px solid black;*/
+  opacity: 0.5;
+}
+
+nav:hover{
+  opacity: 1;
 }
 
 #map {
