--- a/app/StyleSheets/index.css
+++ b/app/StyleSheets/index.css
@@ -9,8 +9,8 @@ nav {
     width: 60%;
     height: auto;
     position: absolute;
-    top: 0px;
-    left: 0px;
+    top: 0;
+    left: 0;
     margin: auto;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
@@ -21,9 +21,11 @@ nav:hover {
     opacity: 1;
 }
 
-#nav-logo{
-    height: 3vh;
-    width: auto;
+
+#nav-logo {
+    height: 5%;
+    width: 5%;
+    margin-right: 10px;
 }
 
 
@@ -31,7 +33,7 @@ nav .navbar-center {
     position: relative;
     width: 100%;
     height: 100%;
-    left: 0;
+    left: 5vw;
     top: 0;
     text-align: center;
     overflow: visible;
@@ -39,11 +41,18 @@ nav .navbar-center {
 
 .navbar-center * {
     display: inline-block;
-    padding: 0 0 0 0;
+    padding: 0;
 }
 
+/*Color Scale Begins*/
 
-/*Center navbar items*/
+#color-scale{
+    height: 3vh;
+    width: 20vw;
+}
+
+/*Color Scale Ends*/
+
 
 #map {
     position: absolute;
