Sidebar animation progress

--- a/app/StyleSheets/index.css
+++ b/app/StyleSheets/index.css
@@ -6,7 +6,7 @@
 
 
 nav {
-    width: 80%;
+    width: 65%;
     height: auto;
     position: absolute;
     top: 0;
@@ -61,7 +61,7 @@ nav form{
 /*Sidenav*/
 
 .sidenav {
-    width: 120px;
+    width: 160px;
     height: 80%;
     position: absolute;
     top: 10%;
@@ -69,8 +69,24 @@ nav form{
     margin: auto;
     background-color: white;
     border:1px solid gray;
-    display:none;
-    opacity:1;
+    opacity: 0.5;
+    overflow:hidden;
+}
+
+.sidenav-arrow{
+    width:30px;
+    height: 55px;
+    margin:0;
+    padding:0;
+
+    position: relative;
+    top:50%;
+    left:155px;
+    background-color: white;
+    border:1px solid grey;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+
 }
 
 
