--- a/app/StyleSheets/index.css
+++ b/app/StyleSheets/index.css
@@ -24,8 +24,8 @@ nav:hover {
 
 
 #nav-logo {
-    height: 5%;
-    width: 5%;
+    width: 120px;
+    height: auto;
     margin-right: 10px;
 }
 
@@ -33,38 +33,37 @@ nav:hover {
 nav .navbar-center {
     position: relative;
     width: 100%;
-    height: 100%;
-    left: 5vw;
-    top: 0;
+    height: auto;
+    margin-left: 10%;
+    margin-right: 10%;
     text-align: center;
-    overflow: visible;
+    overflow: hidden;
 }
-nav form{
-    width: 400px;
-    display:inline-block;
-}
-
 
 .navbar-center * {
-    display: inline-block;
-    padding: 0;
+    /*display: inline-block;*/
+    /*padding: 0;*/
+}
+
+.navbar-nav{
 }
 
 /*Color Scale Begins*/
 
 .color-scale-holder{
     /*border:1px solid black;*/
-    width: 20vw;
-    margin-left:10px;
+    width: 100%;
+    margin-left:0px;
+    /*border: 1px solid red;*/
 }
-#color-scale {
-    height: 3vh;
-    width: 20vw;
+.color-scale-holder .title{
+/*border:1px solid red;*/
+    width: 100%;
 }
 
 #color-gradient{
-    height: 3vh;
-    width: 20vw;
+    width: 100%;
+    height:3vh;
     /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#c12700+0,d63a00+6,f95a00+14,ff6500+16,ff7800+20,ef8900+23,da9a00+25,9ac800+31,77de00+34,4ef500+39,36ff00+43,36fa10+47,36ed29+51,5491b6+58,2951f2+63,4535fc+65,3c4eea+73,32abd7+83,14d3d5+92,07e5d4+95,02eed8+100 */
     background: #c12700; /* Old browsers */
     background: -moz-linear-gradient(left, #c12700 0%, #d63a00 6%, #f95a00 14%, #ff6500 16%, #ff7800 20%, #ef8900 23%, #da9a00 25%, #9ac800 31%, #77de00 34%, #4ef500 39%, #36ff00 43%, #36fa10 47%, #36ed29 51%, #5491b6 58%, #2951f2 63%, #4535fc 65%, #3c4eea 73%, #32abd7 83%, #14d3d5 92%, #07e5d4 95%, #02eed8 100%); /* FF3.6-15 */
