--- a/app/view/main.html
+++ b/app/view/main.html
@@ -1,6 +1,9 @@
-<divs>
-    <h3>Map</h3>
+<div class="container" ng-controller="mapLoad">
+
+<h3>Map</h3>
     <a ui-sref="analytics">analytics</a>
+    <br>
+    <a ui-sref="venue">Test map UI</a>
     <div id="map"></div>
-</divs>
+</div>
 
