Dave helped me fix gservice refresh - TY

--- a/app/view/main.html
+++ b/app/view/main.html
@@ -1,9 +1,9 @@
-<div class="container" ng-controller="mapLoad">
+<divs ng-controller="mapLoad">
 
 <h3>Map</h3>
     <a ui-sref="analytics">analytics</a>
     <br>
     <a ui-sref="venue">Test map UI</a>
     <div id="map"></div>
-</div>
+</divs>
 
