--- a/app/StyleSheets/index.css
+++ b/app/StyleSheets/index.css
@@ -4,50 +4,14 @@
 /* Always set the map height explicitly to define the size of the div
  * element that contains the map. */
 
-
-nav {
-  width: 8vw;
-  height: 5vw;
-  border-radius:0 0 10px 10px;
-  margin-left:10vw;
-  border:1px solid gray;
-  opacity: 0.2;
+.container-fluid .dropdown{
+  opacity: 0.4;
 }
 
-nav:hover {
+.container-fluid .dropdown:hover{
   opacity: 1;
 }
 
-.navbar-center{
-  width: 100%;
-  height: 100%;
-}
-
-.navbar-center a{
-font-size: 1rem;
-  margin:0;
-  padding:0;
-}
-
-/*Logo image */
-#nav-logo {
-}
-
-/*Color Scale Begins*/
-
-.color-scale-holder{
-  /*border:1px solid gray;*/
-  /*border-radius: 10px;*/
-  /*margin-bottom: 20px;*/
-  /*!*padding: top right bottom left*!*/
-  /*padding: 10px 8px 10px 8px;*/
-  /*!*background-color: rgba(241, 241, 234, 0.53);*!*/
-  /*background-color: rgba(255, 255, 255, 0.47);*/
-}
-.color-scale-holder .title{
-  /*border:1px solid red;*/
-  width: 100%;
-}
 
 #color-gradient{
   width: 100%;
