--- a/app/view/main.html
+++ b/app/view/main.html
@@ -1,59 +1,66 @@
-<divs ng-controller="mapLoad">
+<div ng-controller="mapLoad">
 
     <div id="map"></div>
 
-    <nav class="navbar fixed-top">
-        <div class="navbar-center">
-            <a class="text-center" href="#">
-                Crime HotSpot
-            </a>
-            <img id="nav-logo" class="img-fluid" src="../app/Content/Images/crimehotspot_logo.png" width="320"
-                 height="154"/>
-
-            <ul class="navbar-nav">
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                       aria-haspopup="true" aria-expanded="false">
-                        Menu
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" ui-sref="analytics">Analytics</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Something else here</a>
-                    </div>
-                </li>
+    <!--Navigation bar-->
+    <div class="container-fluid">
+        <div class="dropright col-xs-4 col-sm-2 col-md-2 col-lg-1 border-bottom border-left border-right rounded p-1 m-0">
+            <div class="col-xs-12 ">
+                <h5 class="text-center">Crime HotSpot</h5>
+            </div>
+            <button class="btn btn-default dropdown-toggle col-sm-12 col-md-12 col-lg-12" type="button" id="menu1"
+                    data-toggle="dropdown">
+                <img class="img-fluid" alt="CrimeHotSpot Logo" src="../app/Content/Images/crimehotspot_logo.png">
+                <span class="caret"></span>
+            </button>
+            <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
+                <li class="border-bottom" role="presentation"><a role="menuitem" tabindex="-1" href="#">Map</a></li>
+                <li class="border-bottom" role="presentation"><a role="menuitem" tabindex="-1" ui-sref="analytics">Analytics</a></li>
+                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">About Us</a></li>
             </ul>
-
-            <!--
-            SEARCH PREDICTION LOCATION FEATURE, Still needed to get js portion working
-            <form class="form-inline my-2 my-lg-0">
-                <input id="searchTextField" class="form-control mr-sm-2" type="text" placeholder="Enter Location">
-                <button class="btn btn-outline-success my-2 my-sm-0" style="padding:6px" type="submit">Enter</button>
-            </form>
-            -->
         </div>
-    </nav>
 
+    </div>
+
+
+
+    <!--Sidenav for crime profiles-->
     <div id="mySidenav" class="sidenav">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a href="#">Armed Robbery <img src="../app/Content/Images/knife-icon.png" height="120px" width="120px"/></a>
-        <a href="#">Car Theft <img src="../app/Content/Images/car-theft.png" height="120px" width="120px"/></a>
-        <a href="#">House Breakins<img src="../app/Content/Images/house-theft.png" height="120px" width="120px"/></a>
-    </div>
-    <a id="sidenavbtn" class="openbtn" onclick="openNav()">&#9776; open</a>
-
-
-    <!--<span id="openButton" onclick="openNav()">&#9776; open</span>-->
-
-    <div class="color-scale-holder fixed-bottom w-25 mx-auto">
-        <div class="d-inline-block title">
-            <h6 class="float-left">Dangerous</h6>
-            <h6 class="float-right">Safer</h6>
+        <h5 class="text-center">Crime Against</h5>
+        <hr>
+        <div ng-click="mapLoad.publicProfileToggle()" class="profile text-center">
+            <h5>Public</h5>
+            <a href="#"><img src="../app/Content/Images/public-crime.png"/></a>
         </div>
-        <div id="color-gradient"></div>
+        <hr>
+        <div class="profile text-center">
+            <h5>Property</h5>
+            <a href="#"><img src="../app/Content/Images/car-theft.png"/></a>
+        </div>
+        <hr>
+        <div class="profile text-center">
+            <h5>Person</h5>
+            <a href="#"><img src="../app/Content/Images/person-crime.png"/></a>
+        </div>
+        <hr>
+        <div class="profile text-center">
+            <h5>Person: Severe</h5>
+            <a class="active" href="#"><img src="../app/Content/Images/knife-icon.png"/></a>
+        </div>
+        <hr>
+    </div>
+
+    <!--Color legend-->
+    <div class="container">
+        <div class="color-scale-holder fixed-bottom mx-auto border-top border-bottom border-secondary rounded mb-2 col-xs-1 col-sm-6 col-md-7 col-lg-4 col-centered">
+            <div class="d-inline-block w-100">
+                <h6 class="float-left">Dangerous</h6>
+                <h6 class="float-right">Safer</h6>
+            </div>
+            <div id="color-gradient"></div>
+        </div>
     </div>
 
 
-</divs>
+</div>
 
