Added a line graph showing crime numbers on each day of the week

--- a/app/view/analytics.html
+++ b/app/view/analytics.html
@@ -98,6 +98,9 @@
 <div ng-controller="crimeChartController" style="float: left; width:33.3%; box-sizing: border-box; margin: auto;">
          <canvas id="pieTimeOfDay" class="chart chart-pie" chart-data="tdData" chart-labels="tdLabels" chart-options="tdOptions"></canvas> 
 </div>
+<div ng-controller="crimeChartController" style="float: left; width:33.3%; box-sizing: border-box; margin: auto;">
+         <canvas id="lineDayOfWeek" class="chart chart-line" chart-data="dwData" chart-labels="dwLabels" chart-options="dwOptions"></canvas> 
+</div>
 
 
 <!-- If you want to know more about how to use this application of date time go to
