--- a/app/view/main.html
+++ b/app/view/main.html
@@ -27,7 +27,7 @@
     <div id="mySidenav" class="sidenav">
         <h5 class="text-center">Crime Against</h5>
         <hr>
-        <div ng-click="mapLoad.publicProfileToggle()" class="profile text-center">
+        <div ng-click="" class="profile text-center">
             <h5>Public</h5>
             <a href="#"><img src="../app/Content/Images/public-crime.png"/></a>
         </div>
