crime profile click functions changed. Still need to be tied to controller.

--- a/app/view/main.html
+++ b/app/view/main.html
@@ -27,22 +27,22 @@
     <div id="mySidenav" class="sidenav">
         <h5 class="text-center">Crime Against</h5>
         <hr>
-        <div ng-click="" class="profile text-center">
+        <div ng-click="publicCrimeProfile()" class="profile text-center">
             <h5>Public</h5>
             <a href="#"><img src="../app/Content/Images/public-crime.png"/></a>
         </div>
         <hr>
-        <div class="profile text-center">
+        <div ng-click="propertyCrimeProfile()" class="profile text-center">
             <h5>Property</h5>
             <a href="#"><img src="../app/Content/Images/car-theft.png"/></a>
         </div>
         <hr>
-        <div class="profile text-center">
+        <div ng-click="personCrimeProfile()" class="profile text-center">
             <h5>Person</h5>
             <a href="#"><img src="../app/Content/Images/person-crime.png"/></a>
         </div>
         <hr>
-        <div class="profile text-center">
+        <div ng-click="severeCrimeProfile()" class="profile text-center">
             <h5>Person: Severe</h5>
             <a class="active" href="#"><img src="../app/Content/Images/knife-icon.png"/></a>
         </div>
