Changed title on line graph

--- a/app/view/analytics.html
+++ b/app/view/analytics.html
@@ -99,7 +99,7 @@
          <canvas id="pieTimeOfDay" class="chart chart-pie" chart-data="tdData" chart-labels="tdLabels" chart-options="tdOptions"></canvas> 
 </div>
 <div ng-controller="crimeChartController" style="float: left; width:33.3%; box-sizing: border-box; margin: auto;">
-         <canvas id="lineDayOfWeek" class="chart chart-line" chart-data="dwData" chart-labels="dwLabels" chart-options="dwOptions"></canvas> 
+         <canvas id="lineDayOfWeek" class="chart chart-line" chart-data="dwData" chart-labels="dwLabels" chart-series="dwSeries" chart-options="dwOptions"></canvas> 
 </div>
 
 
