--- a/app/view/main.html
+++ b/app/view/main.html
@@ -26,30 +26,35 @@
 <div id="mySidenav" class="sidenav">
     <h5 class="text-center">Crime Against</h5>
     <hr>
-    <div ng-click="publicCrimeProfile()" class="profile text-center">
+    <div class="profile text-center">
         <h5>Public</h5>
-        <button type="button" class="btn3d btn btn-white btn-lg">
+        <button ng-click="publicProfile()"
+                ng-class="{'active' : togglePublic}" type="button"
+                class="btn3d btn btn-white btn-lg">
             <a href="#"><img src="../app/Content/Images/public-crime.png"/></a>
         </button>
     </div>
     <hr>
-    <div ng-click="propertyCrimeProfile()" class="profile text-center">
+    <div class="profile text-center">
         <h5>Property</h5>
-        <button type="button" class="btn3d btn btn-white btn-lg">
+        <button ng-click="propertyProfile()" ng-class="{'active' : toggleProperty}" type="button"
+                class="btn3d btn btn-white btn-lg">
             <a href="#"><img src="../app/Content/Images/car-theft.png"/></a>
         </button>
     </div>
     <hr>
-    <div ng-click="personCrimeProfile()" class="profile text-center">
+    <div class="profile text-center">
         <h5>Person</h5>
-        <button type="button" class="btn3d btn btn-white btn-lg">
+        <button ng-click="personProfile()" ng-class="{'active' : togglePerson}" type="button"
+                class="btn3d btn btn-white btn-lg">
             <a href="#"><img src="../app/Content/Images/person-crime.png"/></a>
         </button>
     </div>
     <hr>
-    <div ng-click="severeCrimeProfile()" class="profile text-center">
+    <div class="profile text-center">
         <h5>Person: Severe</h5>
-        <button type="button" class="btn3d btn btn-white btn-lg">
+        <button ng-click="severeProfile()" ng-class="{'active' : toggleSevere}" type="button"
+                class="btn3d btn btn-white btn-lg">
             <a class="active" href="#"><img src="../app/Content/Images/knife-icon.png"/></a>
         </button>
     </div>
