Added classes to more properly style dropdown menu links.

--- a/app/view/main.html
+++ b/app/view/main.html
@@ -12,10 +12,12 @@
             <span class="caret"></span>
         </button>
         <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
-            <li class="border-bottom" role="presentation"><a role="menuitem" tabindex="-1" href="#">Map</a></li>
-            <li class="border-bottom" role="presentation"><a role="menuitem" tabindex="-1"
+            <li class="dropdown-item" role="presentation"><a role="menuitem" tabindex="-1" href="#">Map</a></li>
+            <div class="dropdown-divider"></div>
+            <li class="dropdown-item" role="presentation"><a role="menuitem" tabindex="-1"
                                                              ui-sref="analytics">Analytics</a></li>
-            <li role="presentation"><a role="menuitem" tabindex="-1" href="#">About Us</a></li>
+            <div class="dropdown-divider"></div>
+            <li class="dropdown-item" role="presentation"><a role="menuitem" tabindex="-1" href="#">About Us</a></li>
         </ul>
     </div>
 
