--- a/app/view/main.html
+++ b/app/view/main.html
@@ -11,13 +11,17 @@
             <img class="img-fluid" alt="CrimeHotSpot Logo" src="../app/Content/Images/crimehotspot_logo.png">
             <span class="caret"></span>
         </button>
-        <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
-            <li class="dropdown-item" role="presentation"><a role="menuitem" tabindex="-1" href="#">Map</a></li>
-            <div class="dropdown-divider"></div>
-            <li class="dropdown-item" role="presentation"><a role="menuitem" tabindex="-1"
-                                                             ui-sref="analytics">Analytics</a></li>
-            <div class="dropdown-divider"></div>
-            <li class="dropdown-item" role="presentation"><a role="menuitem" tabindex="-1" href="#">About Us</a></li>
+
+        <ul id="horizontalmenu" class="dropdown-menu" role="menu" aria-labelledby="menu1">
+            <div class="row w-100 mx-auto">
+                <li class="col-4 border-right" role="presentation"><a class="nav-link text-dark" role="menuitem"
+                                                    tabindex="-1" href="#">Map</a></li>
+                <li class="col-4 border-right" role="presentation" ui-sref="analytics"><a class="nav-link text-dark"
+                                                                        role="menuitem" tabindex="-1"
+                                                                        ui-sref="analytics">Analytics</a></li>
+                <li class="col-4 border-right" role="presentation"><a class="nav-link text-dark" role="menuitem" tabindex="-1" href="#">About
+                    Us</a></li>
+            </div>
         </ul>
     </div>
 
