About-us link removed from analytics page and in the main page it now links to our 411w website biography.

--- a/app/view/analytics.html
+++ b/app/view/analytics.html
@@ -19,14 +19,8 @@
 
     <div class="collapse navbar-collapse" id="navbarColor01">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" ui-sref="main">Map <span class="sr-only">(current)</span></a>
-            </li>
             <li class="nav-item">
-                <a class="nav-link" ui-sref="analytics">Analytics</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" ui-sref="aboutus">About Us</a>
+                <a class="nav-link" ui-sref="main">Map</a>
             </li>
             </ul>
     </div>
