--- a/app/view/main.html
+++ b/app/view/main.html
@@ -19,7 +19,7 @@
                 <li class="col-4 border-right" role="presentation" ui-sref="analytics"><a class="nav-link text-dark"
                                                                         role="menuitem" tabindex="-1"
                                                                         ui-sref="analytics">Analytics</a></li>
-                <li class="col-4 border-right" role="presentation"><a class="nav-link text-dark" role="menuitem" tabindex="-1" href="#">About
+                <li class="col-4 border-right" role="presentation" href="https://www.cs.odu.edu/~411silver/biography.html"><a target="_blank" href="https://www.cs.odu.edu/~411silver/biography.html" class="nav-link text-dark" role="menuitem" tabindex="-1" href="#">About
                     Us</a></li>
             </div>
         </ul>
