Clicking talks to the controller and limits the crimes inside of SafetyScore. Just need to trigger a map refresh to reflect the new limited dataset.
Note this is only set for property crimes so far. Will expand once the last step is added.
Also I moved a lot of stuff around. Whoops.

--- a/app/view/main.html
+++ b/app/view/main.html
@@ -29,7 +29,7 @@
 
 
 <!--Sidenav for crime profiles-->
-<div id="mySidenav" class="sidenav">
+<div id="mySidenav" class="sidenav" ng-controller="safetyScoreCtrl">
     <h5 class="text-center">Crime Against</h5>
     <hr>
     <div class="profile text-center">
