--- a/app/StyleSheets/index.css
+++ b/app/StyleSheets/index.css
@@ -37,12 +37,13 @@
 #color-gradient {
   width: 100%;
   height: 3vh;
-  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#c12700+0,d63a00+6,f95a00+14,ff6500+16,ff7800+20,ef8900+23,da9a00+25,9ac800+31,77de00+34,4ef500+39,36ff00+43,36fa10+47,36ed29+51,5491b6+58,2951f2+63,4535fc+65,3c4eea+73,32abd7+83,14d3d5+92,07e5d4+95,02eed8+100 */
-  background: #c12700; /* Old browsers */
-  background: -moz-linear-gradient(left, #c12700 0%, #d63a00 6%, #f95a00 14%, #ff6500 16%, #ff7800 20%, #ef8900 23%, #da9a00 25%, #9ac800 31%, #77de00 34%, #4ef500 39%, #36ff00 43%, #36fa10 47%, #36ed29 51%, #5491b6 58%, #2951f2 63%, #4535fc 65%, #3c4eea 73%, #32abd7 83%, #14d3d5 92%, #07e5d4 95%, #02eed8 100%); /* FF3.6-15 */
-  background: -webkit-linear-gradient(left, #c12700 0%, #d63a00 6%, #f95a00 14%, #ff6500 16%, #ff7800 20%, #ef8900 23%, #da9a00 25%, #9ac800 31%, #77de00 34%, #4ef500 39%, #36ff00 43%, #36fa10 47%, #36ed29 51%, #5491b6 58%, #2951f2 63%, #4535fc 65%, #3c4eea 73%, #32abd7 83%, #14d3d5 92%, #07e5d4 95%, #02eed8 100%); /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(to right, #c12700 0%, #d63a00 6%, #f95a00 14%, #ff6500 16%, #ff7800 20%, #ef8900 23%, #da9a00 25%, #9ac800 31%, #77de00 34%, #4ef500 39%, #36ff00 43%, #36fa10 47%, #36ed29 51%, #5491b6 58%, #2951f2 63%, #4535fc 65%, #3c4eea 73%, #32abd7 83%, #14d3d5 92%, #07e5d4 95%, #02eed8 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#c12700', endColorstr='#02eed8', GradientType=1); /* IE6-9 */
+  /* Old Gradient Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#c12700+0,d63a00+6,f95a00+14,ff6500+16,ff7800+20,ef8900+23,da9a00+25,9ac800+31,77de00+34,4ef500+39,36ff00+43,36fa10+47,36ed29+51,5491b6+58,2951f2+63,4535fc+65,3c4eea+73,32abd7+83,14d3d5+92,07e5d4+95,02eed8+100 */
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ff0000+0,ffb500+14,eeff00+30,11ff00+44,00fbff+59,0073ff+80,ffffff+100 */
+  background: #ff0000; /* Old browsers */
+  background: -moz-linear-gradient(left, #ff0000 0%, #ffb500 14%, #eeff00 30%, #11ff00 44%, #00fbff 59%, #0073ff 80%, #ffffff 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(left, #ff0000 0%,#ffb500 14%,#eeff00 30%,#11ff00 44%,#00fbff 59%,#0073ff 80%,#ffffff 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to right, #ff0000 0%,#ffb500 14%,#eeff00 30%,#11ff00 44%,#00fbff 59%,#0073ff 80%,#ffffff 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff0000', endColorstr='#ffffff',GradientType=1 ); /* IE6-9 */
 }
 
 /*Color Scale Ends*/
