added demo styling

--- a/app/view/main.html
+++ b/app/view/main.html
@@ -28,6 +28,15 @@
 </div>
 
 
+<!-- TODO put a controller for the easter egg -->
+<div id="easterSunday"  class="easterEgg" >
+
+    <h5 class="text-center">Demo</h5>
+    <hr>
+
+</div>
+
+
 <!--Sidenav for crime profiles-->
 <div id="mySidenav" class="sidenav" ng-controller="safetyScoreCtrl">
     <h5 class="text-center">Crime Against</h5>
