--- a/app/view/main.html
+++ b/app/view/main.html
@@ -33,6 +33,13 @@
 
     <h5 class="text-center">Demo</h5>
     <hr>
+    <div class="profile text-center" ng-controller="safetyScoreCtrl">
+        <button ng-click="publicProfile()"
+                ng-class="{'active' : togglePublic}" type="button"
+                class="btn3d btn btn-white btn-lg">
+            <a href="#"><img src="../app/Content/Images/easterEgg.png"/></a>
+        </button>
+    </div>
 
 </div>
 
