--- a/app/view/main.html
+++ b/app/view/main.html
@@ -32,23 +32,22 @@
   <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
     Date Filter
   </button>
-  <div class="dropdown-menu" style="padding-bottom: 0px;">
-                        <form>
+  <div class="dropdown-menu" style="padding-bottom: 0px;" ng-controller="safetyScoreCtrl">
+                    <form>
                         <div class="form-group" style="float: left;">
                             <label>Start Date</label>
-                            <input type='text' ng-model="sDate"/>
+                            <input datetime-picker date-format="yyyy-MM-dd" ng-model="dates.startdate" date-only/>
                         </div>
 
                         <div class="form-group" style="float: left; clear: right;">
                             <label>End Date</label>
-                            <input type='text' ng-model="eDate"/>
+                            <input datetime-picker date-format="yyyy-MM-dd" ng-model="dates.enddate" date-only/>
                         </div>
                         <input ng-click="extractDates()" class="button" type="submit" value="Submit">
                     </form>
   </div>
 </div>
 
-<!-- TODO put a controller for the easter egg -->
 <div id="easterSunday"  class="easterEgg" ng-controller="safetyScoreCtrl" >
 
     <h5 class="text-center">Demo</h5>
